# tex-repo

./: .gitifnore  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.backup.md  README.md  pyproject.toml  pytest.ini  tex-repo
docs/: AUTOMATION.md  AUTOMATION_COMMAND_MAP.md  COMMAND_TEST_REPORT.md  GUARD_CODES.md  INTEGRATION_TEST_SUMMARY.md  INVARIANTS.md  NAMING.md  STYLE.md
legacy/tests-back/: run_tests.py  test_command_matrix.py  test_e2e_introduction_book_only.py  test_frontmatter_mainmatter_separation.py  test_intro_book_structure.py  test_introduction_index.py  test_new_commands.py  test_section_title_formatting.py
legacy/tests_legacy/: test_text_init_hardening_legacy.py
legacy/texrepo-back/: book_cmd.py  build_cmd.py  chapter_cmd.py  cli.py  common.py  config.py  config_cmd.py  domain_cmd.py  errors.py  init_cmd.py  install_cmd.py  (+7 more)
tests/: README.md  SMOKE_REPORT.md  run_tests.py  test_appendix_include.py  test_command_matrix.py  test_e2e_introduction_book_only.py  test_init_from_text.py  test_integration.py  test_intro_book_structure.py  test_introduction_index.py  test_layout_support.py  test_parts_structure.py  test_section_title_formatting.py  test_smoke_cli.py  test_stage_suggestion.py
texrepo/: __init__.py  __main__.py  build_cmd.py  cli.py  cmd_authoring.py  cmd_build.py  cmd_init.py  cmd_release.py  cmd_validation.py  common.py  domain_cmd.py  env_cmd.py  fix_cmd.py  init_cmd.py  introduction_index.py  latex_log_hints.py  layouts.py  meta_cmd.py  paper_cmd.py  release_cmd.py  rules.py  section_cmd.py  status_cmd.py  utils.py  validators.py
(+35 files in other folders)
